# enclave-worker

./: .gitignore  Makefile  README.md  x.sh
app/: Cargo.toml  Enclave_u.c  Enclave_u.h
app/src/: db.rs  ecall_api.rs  enclave_main.rs  init.rs  main.rs  ocall_impl.rs  say.rs  seal.rs
app/tests/: ffi.rs  integration_test.rs  mock_enclave.rs  mod.rs
enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h
enclave-worker/: Cargo.toml  Enclave_u.c  Enclave_u.h
enclave-worker/src/: main.rs
enclave/src/: lib.rs  ocall_api.rs  save.rs  test_seal.rs
